# Soroka

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/plans/: 2026-04-30-soroka-mvp.md
docs/specs/: 2026-04-30-design.md
scripts/: eval_search.py  soroka-mcp
src/adapters/: deepgram.py  github_mirror.py  jina.py  openrouter.py  tg_files.py
src/bot/: auth.py  main.py
src/core/: attachments.py  db.py  export.py  ingest.py  intent.py  kind.py  links.py  llm_json.py  models.py  neighbors.py  notes.py  owners.py  search.py  settings.py  sibling_index.py  stats.py  sync_deleted.py  translate.py  vec.py
src/mcp/: server.py
tests/: conftest.py  test_attachments.py  test_auth.py  test_bot_menu.py  test_channel_handler.py  test_daily_github_backup.py  test_db.py  test_deepgram.py  test_e2e.py  test_entity_urls.py  test_eval_runner.py  test_export.py  test_extractor_docx.py  test_extractor_ocr.py  test_extractor_pdf.py  test_extractor_plain.py  test_extractor_text.py  test_extractor_web.py  test_extractor_xlsx.py  test_extractor_youtube.py  test_github_mirror.py  test_help_buttons.py  test_ingest.py  test_intent.py  test_jina.py  test_kind.py  test_links.py  test_llm_json.py  test_main_imports.py  test_mcp_server.py  test_media_group.py  test_models.py  test_neighbors.py  test_notes.py  test_openrouter.py  test_owners.py  test_reset_command.py  test_search.py  test_search_callbacks.py  test_search_format.py  (+13 more)
tests/eval/: corpus.py  golden_queries.yaml  metrics.py  queries.py  queries_codex.py  run_eval.py  (+1 more)
(+19 files in other folders)
